test/files/ill-typed/007_lambda_let_typed.lam
λx. let y = x + 1 in y : Nat -> Bool
